--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>clever-coder-resume</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Eugene Bertrand's Portfolio</title>
+    <meta name="description" content="Eugene Bertrand's Portfolio" />
+    <meta name="author" content="Eugene Bertrand" />
 
-    <meta property="og:title" content="clever-coder-resume" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Eugene Bertrand's Portfolio" />
+    <meta property="og:description" content="Eugene Bertrand's Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
